--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,20 @@
   
   background: none;
   border: 2px solid #0099cc;
-  color: #0099cc;
-  top-margin: 100px;
-  
+  color: #0099cc; 
 }
 
 #quote-layout{
   border:solid;
-  display:inline-block;
-  width:400px;
-  position:center;
-  margin-left:20em;
+  width:700px;
+  margin:auto;
+  margin-top: 30vh;
+}
+
+#author{
+  text-align:right;
+}
+
+#heart{
+  float:right;
 }
